

syntax = "proto3";

package platon.block;

import "org/platon/core/transactionReceipt.v2.proto";

option java_package = "org.platon.core.proto";
option java_outer_classname = "TransactionInfoProto";
option java_multiple_files = true;

message TransactionInfoMessage {
    platon.tx.TransactionReceiptBase receipt    = 1;
    bytes blockHash                             = 2;
    bytes parentBlockHash                        = 3;
    int64 index                                 = 4;
}

message TransactionInfoMessageList {
    repeated TransactionInfoMessage txInfoList    = 1;
}
